# WeKit

./: .gitignore  .gitmodules  AGENTS.md  ASYNC_API_UPDATE.md  CHEATSHEET.md  COMPLETE_SOLUTION_CN.md  CONTRIBUTING.md  DEADLOCK_ANALYSIS.md  FINAL_SUMMARY.md  FIX_SUMMARY_CN.md  INDEX_CN.md  QUICK_FIX_GUIDE_CN.md  README.md  README_HOTFIX.md  SCRIPT_API_DOCUMENT.md  SCRIPT_ENGINE_API_REFERENCE.md  SCRIPT_EXAMPLES_FIXED.js  VERSIONING.md  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/scripts/: send_telegram.py
.github/workflows/: android_ci.yml  bot-contributing.yml  build-all-features.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/dev.ujhhgtg.wekit.agent.data.WeAgentDatabase/: 13.json  6.json  7.json  8.json
app/src/main/: AndroidManifest.xml
app/src/main/rust/wekit-native/: Cargo.toml  build.rs
app/src/main/rust/wekit-native/include/: native_hook.h
app/src/main/rust/wekit-native/src/: audio_utils.rs  crash_handler.rs  crash_triggerer.rs  lib.rs  logging.rs  shared.rs  telegram_sticker.rs  utils.rs
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
contrib/wekit-read-receipts-server/: Cargo.toml
docs/: README.md  faq.md  getting-started.md  installation.md  module-settings.md
gradle/: libs.versions.toml
wekit-zygisk/: README.md
wekit-zygisk/native/: art_hook.cpp  art_hook.h  main.cpp  so_hider.cpp  so_hider.h
wekit-zygisk/template/: config.sh  customize.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+864 files in other folders)
